--- a/index.html
+++ b/index.html
@@ -11,13 +11,16 @@
     />
     <link rel="stylesheet" href="index.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
+
     <title>Fiber Starter</title>
   </head>
   <body>
     <main class="main-container">
       <!--FIRST SECTION-->
+
       <section class="first-section">
         <!--NAVIGATION BAR -->
+
         <nav class="navigation-tab">
           <ul class="sidebar">
             <a onclick="hideSidebar()" href="#">
@@ -97,6 +100,7 @@
       </section>
 
       <!--SECOND SECTION-->
+
       <section class="second-section">
         <p>Why Fiber?</p>
         <h1>A good portfolio means good employability.</h1>
@@ -132,6 +136,7 @@
       </section>
 
       <!--THIRD SECTION-->
+
       <section class="third-section">
         <article>
           <div class="third-section-article">
@@ -150,6 +155,7 @@
       </section>
 
       <!--FOURTH SECTION-->
+
       <section class="fourth-section">
         <div class="testimonials">
           <div class="testimonial-1">
@@ -206,6 +212,7 @@
       </section>
 
       <!--FOOTER-->
+
       <footer>
         <div class="info">
           <h1>Fiber</h1>
@@ -247,76 +254,6 @@
       </footer>
     </main>
 
-    <!--JAVASCRIPT-->
-    <script>
-      function showSidebar() {
-        const sidebar = document.querySelector('.sidebar');
-        sidebar.style.display = 'flex';
-      }
-
-      function hideSidebar() {
-        const sidebar = document.querySelector('.sidebar');
-        sidebar.style.display = 'none';
-      }
-
-      ScrollReveal({
-        reset: false,
-        distance: '32px',
-        duration: 2500,
-        delay: 400,
-      });
-
-      ScrollReveal().reveal('.first-article', { delay: 200, origin: 'left' });
-      ScrollReveal().reveal('.illustration', { delay: 300, origin: 'right' });
-
-      ScrollReveal().reveal('.second-section p:first-child', {
-        delay: 200,
-        origin: 'bottom',
-      });
-      ScrollReveal().reveal('.second-section h1', {
-        delay: 250,
-        origin: 'bottom',
-      });
-      ScrollReveal().reveal('.second-section .features .first-feature', {
-        delay: 300,
-        origin: 'bottom',
-      });
-      ScrollReveal().reveal('.second-feature', {
-        delay: 350,
-        origin: 'bottom',
-      });
-      ScrollReveal().reveal('.third-feature', { delay: 400, origin: 'bottom' });
-
-      ScrollReveal().reveal(
-        '.third-section article .third-section-article, .third-section article .image',
-        {
-          delay: 300,
-          origin: 'bottom',
-          interval: 200,
-        }
-      );
-
-      ScrollReveal().reveal('.testimonial-3', { delay: 200, origin: 'left' });
-      ScrollReveal().reveal('.testimonial-2', { delay: 400, origin: 'left' });
-      ScrollReveal().reveal('.testimonial-1', { delay: 600, origin: 'left' });
-
-      ScrollReveal().reveal('footer .info', { delay: 200, origin: 'bottom' });
-      ScrollReveal().reveal('footer .sitemap', {
-        delay: 250,
-        origin: 'bottom',
-      });
-      ScrollReveal().reveal('footer .resources', {
-        delay: 300,
-        origin: 'bottom',
-      });
-      ScrollReveal().reveal('footer .company', {
-        delay: 350,
-        origin: 'bottom',
-      });
-      ScrollReveal().reveal('footer .portfolio', {
-        delay: 400,
-        origin: 'bottom',
-      });
-    </script>
+    <script type="text/javascript" src="script.js"></script>
   </body>
 </html>
